[package]
name = "wei-docker-install"
version = "0.2.6"
edition = "2021"

description = "wei docker install"
documentation = "https://github.com/zuiyue-com/wei-log"
homepage = "https://github.com/zuiyue-com/wei-log"
license = "MIT OR Apache-2.0"

[dependencies]
wei-log = "0.2.10"
wei-env = "0.2.13"
wei-run = "0.2.5"
dirs = "5.0.1"
winapi = { version = "0.3", features = ["winuser", "handleapi", "libloaderapi", "winbase", "securitybaseapi", "shellapi", "tlhelp32", "consoleapi", "wincon", "processenv"] }
encoding_rs = "0.8.32"
serde_json = "1.0.96"
